# slab_qick_calib

./: .gitignore  NameServer.ipynb  README.md  README_classes.md  README_data_structures.md  README_experiments.md  README_qubit_tuning.md  __init__.py  auto_mini.ipynb  auto_mini2.ipynb  auto_mini_v2.ipynb  auto_mini_v3.ipynb  autocalib2q_config.py  autocalib_config.py  autocalib_config_cull.py  autocalibration_cfg.yml  autocalibration_cfg_mp.yml  coherence2405.yml  coherence2405_full.yml  coherence2405_play.yml  config.py  config_init_config_manual.md  config_manual.md  copy_rfsoc_code.bat  fitting.py  handy.py  instruments.cfg  llotsa8  meas_resonators.ipynb  old_config_manual.md  play_exp.py  pyproject.toml  qick_check.py  qick_experiment.py  qick_experiment_2q.py  qick_program.py  qubit_params.py  qubit_tuning.py  scan.py  setup.py  (+9 more)
analysis/: __init__.py  fitting.py  qubit_params.py  time_series.py
calib/: __init__.py  measure_func.py  qubit_tuning.py  readout_helpers.py  time_tracking.py  tuneup.py
configs/: Litten1.yml  Litten_tunable1.yml  QB-CB7.yml  QubitA.yml  QubitB.yml  QubitB_v2.yml  SMPD_4x2.yml  Terracat1.yml  aggron.yml  aggron_model.yml  autocalibration_cfg.yml  autocalibration_cfg_mp.yml  autocalibration_cfg_mp2.yml  coherence2405.yml  coherence2405_full.yml  coherence2405_play.yml  compare.txt  holder.yml  identical_transmon.yml  instruments.cfg  lairon2.yml  lairon3.yml  lairon3_model.yml  ll.yml  llotsa0.yml  llotsa05.yml  llotsa05_anneal.yml  llotsa35 - Copy.yml  llotsa35-c2.yml  llotsa35.yml  llotsa350.yml  llotsa8 - Copy.yml  llotsa8.yml  q0.yml  (+2 more)
(+91 files in other folders)
