[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slab_qick_calib"
version = "0.1.0"
description = "Qubit calibration tools for QICK"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "", email = "circuitqed@gmail.com"}
]
dependencies = [
    "numpy",
    "scipy",
    "datetime",
    "seaborn", 
    "matplotlib",
    "qick",
    "pyyaml",
    "tqdm",
    "h5py",
    "Pyro4",
    "python-dateutil",
    "ipywidgets",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "www.github.com/SchusterLab/slab_qick_calib"
"Bug Tracker" = "www.github.com/SchusterLab/slab_qick_calib/issues"

[tool.setuptools]
packages = ["slab_qick_calib"]

[tool.setuptools.package-dir]
"slab_qick_calib" = "."
